--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="man.css">
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
 
@@ -12,6 +12,6 @@
     <p>This was sent by my express server</p>
     
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
